Added 'npm i' step

--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -20,6 +20,10 @@ stages:
 
     - checkout: self
       persistCredentials: true
+
+    - powershell: |
+        npm install
+      display: npm install
       
     - powershell: |
         $week = (Invoke-WebRequest https://whatsprintis.it -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).week
