--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -66,21 +66,23 @@ stages:
 
     - powershell: |
         $date= Get-Date -Format "MMddyyyy"
-        $env:updateBranch="Localization-update_$date"
-        git checkout -b $env:updateBranch
+        $updateBranch="Localization-update_$date"
+        echo "##vso[task.setvariable variable=updateBranch]$updateBranch"
+
+        git checkout -b $updateBranch
 
         Remove-Item -Recurse -Force Localize
 
         git add -A
         git commit -m "Removing Localize folder"
-        git push origin $env:updateBranch
+        git push origin $updateBranch
       displayName: Create and push localization update branch
       condition: and(succeeded(), or(and(eq(variables['WEEK'], '3'), eq(variables['build.reason'], 'Schedule')), eq(variables['build.reason'], 'Manual')))
     
     - task: PowerShell@2
       inputs:
         filePath: 'ci/open-pullrequest.ps1'
-        arguments: "-SourceBranch $env:updateBranch"
+        arguments: "-SourceBranch $(updateBranch)"
         failOnStderr: true
       env:
         GH_TOKEN: '$(GitHubPAT)'
