Revert "Added clean option"
This reverts commit 4ce43fc65c5111aad94d4fd7bd0f4ba475ff16d5.

--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -20,7 +20,6 @@ stages:
 
     - checkout: self
       persistCredentials: true
-      clean: true
 
     - powershell: |
         npm install
@@ -36,7 +35,7 @@ stages:
     - powershell: |
         git config --global user.email "$(github_email)"
         git config --global user.name "$(username)"
-        git checkout -b origin/Localization
+        git checkout -b Localization origin/Localization
         git merge origin/master
         git push origin Localization
       displayName: "Sync with master branch"
