Upgrade BinSkim to v4.3.1

--- a/.azure-pipelines/.vsts.release.yml
+++ b/.azure-pipelines/.vsts.release.yml
@@ -94,6 +94,8 @@ extends:
     featureFlags:
       autoBaseline: false
     sdl:
+      binskim:
+        preReleaseVersion: '4.3.1'
       sbom:
         enabled: true
       baseline:
