--- a/Tasks/MavenV2/package.json
+++ b/Tasks/MavenV2/package.json
@@ -18,7 +18,7 @@
     "azure-pipelines-task-lib": "^4.13.0",
     "azure-pipelines-tasks-codeanalysis-common": "^2.226.0",
     "azure-pipelines-tasks-codecoverage-tools": "2.201.0",
-    "azure-pipelines-tasks-java-common": "^2.0.0-preview.0",
+    "azure-pipelines-tasks-java-common": "^2.264.0",
     "azure-pipelines-tasks-packaging-common": "^3.230.0",
     "azure-pipelines-tool-lib": "^2.0.10",
     "base-64": "^0.1.0",
