Changes for scheduled CG check for all tasks

--- a/.azure-pipelines/.vsts.release.yml
+++ b/.azure-pipelines/.vsts.release.yml
@@ -76,7 +76,7 @@ variables:
   ${{ else }}:
     value: 'false'
 - name: DEPLOY_ALL_TASKSVAR
-  ${{ if eq(parameters.task_deployment,'Deploy all Tasks') }}:
+  ${{ if or(eq(parameters.task_deployment,'Deploy all Tasks'), eq(variables['ENABLE_CG_SCAN_ALL_TASKS'], 'true')) }}:
     value: 'true'
   ${{ else }}:
     value: 'false'
@@ -141,6 +141,7 @@ extends:
           parameters:
             os: Windows_NT
             useSemverBuildConfig: ${{ parameters.useSemverBuildConfig }}
+            enableCgScanAllTasks: $(ENABLE_CG_SCAN_ALL_TASKS)
 
       # Publish
       - job: publish
@@ -148,7 +149,7 @@ extends:
         timeoutInMinutes: 360
         dependsOn:
         - build_all_windows
-        condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), eq(variables['tasksSkipPublish'], 'false'))
+        condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), eq(variables['tasksSkipPublish'], 'false'), ne(variables['ENABLE_CG_SCAN_ALL_TASKS'], 'true'))
         pool:
           name: 1ES-ABTT-Shared-Pool
           image: abtt-windows-2022
@@ -182,7 +183,8 @@ extends:
                 eq(variables['build.reason'], 'Manual'),
                 eq(variables['FORCE_COURTESY_PUSH'], 'true')
               )
-            )
+            ),
+            ne(variables['ENABLE_CG_SCAN_ALL_TASKS'], 'true')
           )
         templateContext:
           outputs:
@@ -205,7 +207,7 @@ extends:
         dependsOn:
         - courtesy_push
         - build_all_windows
-        condition: succeeded()
+        condition: and(succeeded(), ne(variables['ENABLE_CG_SCAN_ALL_TASKS'], 'true'))
         timeoutInMinutes: 360
         pool:
           name: 1ES-ABTT-Shared-Pool
