--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -2,7 +2,6 @@ parameters:
   os: ''
   useSemverBuildConfig: false
   generateReleaseNotes: true
-  enableCgScanAllTasks: false
 
 steps:
 
@@ -115,8 +114,7 @@ steps:
       succeeded(),
       in(variables['build.reason'], 'Schedule', 'Manual'),
       eq(variables['COURTESY_PUSH'], 'true'),
-      eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-      ne('${{ parameters.enableCgScanAllTasks }}', 'true')
+      eq(variables['Build.SourceBranch'], 'refs/heads/master')
     )
   displayName: Push release branch
 
@@ -176,15 +174,13 @@ steps:
       and(
         succeeded(),
         ne(variables['build.reason'], 'PullRequest'),
-        ne(variables['numTasks'], 0),
-        ne('${{ parameters.enableCgScanAllTasks }}', 'true')
+        ne(variables['numTasks'], 0)
       )
 
   # Sign all task zips as nuget packages
   - template: /ci/sign-all-tasks.yml@self
     parameters:
       layoutRoot: $(Build.SourcesDirectory)\_package\tasks-layout
-    condition: ne('${{ parameters.enableCgScanAllTasks }}', 'true')
 
   # Stage all the tasks into a single zip for upload
   - script: node ./ci/stage-package.js false
@@ -193,8 +189,7 @@ steps:
       and(
         succeeded(),
         ne(variables['build.reason'], 'PullRequest'),
-        ne(variables['numTasks'], 0),
-        ne('${{ parameters.enableCgScanAllTasks }}', 'true')
+        ne(variables['numTasks'], 0)
       )
 
 # Test
@@ -242,8 +237,7 @@ steps:
         in(variables['build.reason'], 'Schedule', 'Manual'),
         eq(variables['COURTESY_PUSH'], 'true'),
         eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-        eq(${{ parameters.generateReleaseNotes }}, true),
-        ne('${{ parameters.enableCgScanAllTasks }}', 'true')
+        eq(${{ parameters.generateReleaseNotes }}, true)
       )
     continueOnError: true
     displayName: Create Release
