--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -17,6 +17,12 @@ steps:
     displayName: Start collect diagnostics
     condition: and(succeeded(), eq(variables.collect_diagnostics, 'true'))
 
+# Use .NET SDK 8
+- task: UseDotNet@2
+  displayName: 'Install .NET Core SDK 8.x'
+  inputs:
+    version: 8.x
+
 # Use node 20, npm 9
 - task: NodeTool@0
   displayName: Use node 20
@@ -79,45 +85,6 @@ steps:
 - powershell: ./ci/set-sprint-variables.ps1
   displayName: Set currentSprint variables
 
-- template: /ci/generate-branch-name.yml@self
-  parameters:
-    prefix: releases
-
-- powershell: |
-    $releaseBranch = "$(branchName)"
-    $isDryRun = "$(isDryRun)"
-
-    # add config entry to avoid errors while pulling
-    git config --global user.email "$(username)@microsoft.com"
-    git config --global user.name "$(username)"
-
-    Write-Host 'Enabling verbose git tracing..'
-    git config --global http.verbose true
-    $env:GIT_TRACE = 1
-    $env:GIT_CURL_VERBOSE = 1
-
-    # Pull commits from remote and push branch to git
-    git checkout -b $releaseBranch
-    if( $isDryRun -eq 'true' ) {
-      Write-Host "DRY RUN: Skipping Git push operations to remote repository"
-    }else{
-        Write-Host "Trying to pull the remote branch.."
-        git pull https://$(GitHubPAT)@github.com/microsoft/azure-pipelines-tasks $releaseBranch
-        if (-not $?) {
-          Write-Host "Failed to pull the remote branch. This is expected if the remote branch doesn't exist."
-        }
-        Write-Host "Trying to push to the remote branch.."
-        git push https://$(GitHubPAT)@github.com/microsoft/azure-pipelines-tasks $releaseBranch
-    }
-  condition: |
-    and(
-      succeeded(),
-      in(variables['build.reason'], 'Schedule', 'Manual'),
-      eq(variables['COURTESY_PUSH'], 'true'),
-      eq(variables['Build.SourceBranch'], 'refs/heads/master')
-    )
-  displayName: Push release branch
-
 - script: node ./ci/check-downgrading.js --task "$(task_pattern_fordowngradingcheck)" --sprint $(currentSprint) --week $(currentSprintWeek)
   displayName: Check for downgrading tasks
   # remove SourceBranch condition after merging users/merlynop/node20merge-2 ; see https://github.com/microsoft/azure-pipelines-tasks/pull/20819
@@ -164,11 +131,27 @@ steps:
       ne(variables['numTasks'], 0)
     )
 
+# Test
+- script: node make.js test
+  displayName: Run tests
+  condition: and(succeeded(), ne(variables['numTasks'], 0), ne(variables['tasksSkipTests'], 'true'))
+
+- script: node make.js testLegacy --task "$(getTaskPattern.task_pattern)"
+  displayName: Legacy tests with node 6
+  condition: and(succeeded(), ne(variables['numTasks'], 0), ne(variables['tasksSkipTests'], 'true'))
+
+# Publish code coverage result
+- task: PublishCodeCoverageResults@1
+  displayName: Publish Code Coverage Results
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: $(System.DefaultWorkingDirectory)/_build/coverage/*coverage.xml
+
 # Only on Windows:
 - ${{ if eq(parameters.os, 'Windows_NT') }}:
 
   # Stage tasks individually into the package directory
-  - script: node ./ci/stage-package.js false individually
+  - script: node ./ci/stage-package.js true individually
     displayName: Stage tasks individually into the package directory
     condition: |
       and(
@@ -183,7 +166,7 @@ steps:
       layoutRoot: $(Build.SourcesDirectory)\_package\tasks-layout
 
   # Stage all the tasks into a single zip for upload
-  - script: node ./ci/stage-package.js false
+  - script: node ./ci/stage-package.js
     displayName: Stage all the tasks into a single zip for upload
     condition: |
       and(
@@ -191,21 +174,6 @@ steps:
         ne(variables['build.reason'], 'PullRequest'),
         ne(variables['numTasks'], 0)
       )
-
-# Test
-- script: node make.js test
-  displayName: Run tests
-  condition: and(succeeded(), ne(variables['numTasks'], 0), ne(variables['tasksSkipTests'], 'true'))
-- script: node make.js testLegacy --task "$(getTaskPattern.task_pattern)"
-  displayName: Legacy tests with node 6
-  condition: and(succeeded(), ne(variables['numTasks'], 0), ne(variables['tasksSkipTests'], 'true'))
-
-# Publish code coverage result
-- task: PublishCodeCoverageResults@1
-  displayName: Publish Code Coverage Results
-  inputs:
-    codeCoverageTool: Cobertura
-    summaryFileLocation: $(System.DefaultWorkingDirectory)/_build/coverage/*coverage.xml
 
 # Only when building on Windows:
 - ${{ if eq(parameters.os, 'Windows_NT') }}:
@@ -219,25 +187,3 @@ steps:
         eq(variables.collect_diagnostics, 'true'),
         ne(variables['numTasks'], 0)
       )
-
-  - powershell: |
-      $releaseBranch = "$(branchName)"
-      $isDryRun = "$(isDryRun)"
-
-      if (($(currentSprintWeek) -eq 3) -or ($isDryRun -eq 'true')) {
-        cd $(System.DefaultWorkingDirectory)/ci/ci-release-notes
-        npm ci
-        node release-notes.js --token $(GitHubPAT) --version $(currentSprint) --releaseBranch $releaseBranch --isDryRun $isDryRun
-      } else {
-        echo "Skipping since release notes generating on week 3"
-      }
-    condition: |
-      and(
-        succeeded(),
-        in(variables['build.reason'], 'Schedule', 'Manual'),
-        eq(variables['COURTESY_PUSH'], 'true'),
-        eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-        eq(${{ parameters.generateReleaseNotes }}, true)
-      )
-    continueOnError: true
-    displayName: Create Release
