--- a/.azure-pipelines/.vsts.release.yml
+++ b/.azure-pipelines/.vsts.release.yml
@@ -168,9 +168,11 @@ extends:
             displayName: 'Publish per task NuGet package artifact'
             PathtoPublish: _package/nuget-packages
             ArtifactName: IndividualNuGetPackages
+            condition: succeeded()
           - output: nuget
             packagesToPush: '$(Build.SourcesDirectory)/_package/nuget-packages/*/*.nupkg'
             packageParentPath: '$(Build.SourcesDirectory)'
+            condition: succeeded()
             ${{ if eq(parameters.dryRun, true) }}:
               publishVstsFeed: 'c86767d8-af79-4303-a7e6-21da0ba435e2/9d34d871-8032-4e10-a34a-c7a01e125865'
             ${{ else }}:
