--- a/Tasks/NuGetCommandV2/package.json
+++ b/Tasks/NuGetCommandV2/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@types/node": "^20.3.1",
     "azure-pipelines-task-lib": "4.17.0",
-    "azure-pipelines-tasks-packaging-common": "3.253.0",
+    "azure-pipelines-tasks-packaging-common": "file:azure-pipelines-tasks-packaging-common-3.266.0.tgz",
     "azure-pipelines-tasks-utility-common": "3.258.0",
     "xmlreader": "^0.2.3"
   },
